--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </div>
     </div>
-    <div style="color: #fff;"><a href="https://ad-slot.ru/buy-link/1829" target="_blank">Разместить ссылку здесь за <span id="ad-slot-l-price-1829">5</span> руб.</a><div style="display: inline-block;" id="ad-slot-l-1829"><script src="https://ad-slot.ru/link-code.php?id=1829" async></script></div></div>
+    <div style="color: #000000;"><a href="https://ad-slot.ru/buy-link/1829" target="_blank">Разместить ссылку здесь за <span id="ad-slot-l-price-1829">5</span> руб.</a><div style="display: inline-block;" id="ad-slot-l-1829"><script src="https://ad-slot.ru/link-code.php?id=1829" async></script></div></div>
     <footer>
       <li>
         © Все права защищены<br><br>
